--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -4676,6 +4676,7 @@ $module-card-lines-to-show: 3;
     margin: 10px;
     border-radius: 5px;
     position: relative;
+    box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.15);
 
     &:hover {
         box-shadow: 0px 0px 17px rgba(0, 0, 0, 0.68);
@@ -4732,7 +4733,7 @@ $module-card-lines-to-show: 3;
     .card_title {
         display: block;
         font-size: 32px;
-        font-weight: 800;
+        font-weight: 600;
         text-align: center;
         margin: 0px auto;
         letter-spacing: 1px;
