redirecting to clix landing page if True parameter

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header_clix.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header_clix.html
@@ -11,7 +11,7 @@
 <nav class="top-bar" data-topbar role="navigation" id="menu_bar_gstudio">
         <ul class="title-area">
             <li class="name show-for-medium-up">
-                <a class="loggedin-user" href="{% url 'landing_page' %}">
+                <a class="loggedin-user" href="{% url 'landing_page'  %}?True">
                 
                 <img src="{{site.SECONDARY_LOGO}}">
                 </a>
