--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_enroll.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_enroll.html
@@ -33,7 +33,7 @@
                 <input id="enrollchk_{{userid}}" type="checkbox" class="enroll_chkbox" checked disabled><label for="enrollchk_{{userid}}" > {% if 'Group' in group_object.member_of_names_list %} {% trans "Joined" %}{% else %}  {% trans "Enrolled" %} {% endif %} 
                 </label>
             {% else %}
-              <input id="enrollchk_{{userid}}" type="checkbox" class="enroll_chkbox" onclick="enroll_user('{{userid}}')" data-user-id='{{userid}}'><label for="enrollchk_{{userid}}" class="enroll-act_lbl"> {% if 'Group' in group_object.member_of_names_list %} {% trans "Join" %} {% else %} {% trans "Join" %} {% endif %} </label>
+              <input id="enrollchk_{{userid}}" type="checkbox" class="enroll_chkbox" onclick="enroll_user('{{userid}}')" data-user-id='{{userid}}'><label for="enrollchk_{{userid}}" class="enroll-act_lbl"> {% if 'Group' in group_object.member_of_names_list %} {% trans "Join" %} {% else %} {% trans "Enroll" %} {% endif %} </label>
             {% endif %}
             </div>
             <hr>
