--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/assets.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/assets.html
@@ -37,17 +37,17 @@
         <div class="row">
         {% if user.is_authenticated  %}
             {% if title == "raw material" and is_gstaff %}
-                <button type="button" class="right orange-button createAsset">
+                <button type="button" class="right orange-button createAsset" style="margin-right:70px;">
                     <i class="fi-plus"> </i>{% trans "Add Resource" %} 
                 </button>
             {% endif %}
             {% if title == "gallery"  %}
-                <button {% if user_access_priv == "allow" %} type="button" class="right orange-button createAsset" {% else %} class=" right orange-button user_not_enrolled" {% endif %}>
+                <button {% if user_access_priv == "allow" %} type="button" class="right orange-button createAsset" style="margin-right:70px;" {% else %} class=" right orange-button user_not_enrolled" {% endif %}>
                     <i class="fi-plus"> </i>{% trans "Add Folder" %} 
                 </button>
             {% endif %}
             {% if title == "asset_list"  %}
-                <button type="button" class="right orange-button createAsset">
+                <button type="button" class="right orange-button createAsset" style="margin-right:70px;">
                     <i class="fi-plus"> </i>{% trans "Add Asset" %} 
                 </button>
             {% endif %}
