deactive redirection to dashboard

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/in-line-texteditor.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/in-line-texteditor.html
@@ -75,7 +75,7 @@
         <div style="margin-left:calc(({{each_reply.level}} - 1) * 48px); {% if each_reply.level == 1 %}margin-top:25px;{% endif %}" class="disc-replies" data-reply-id="{{ each_reply.oid }}" data-priornode-id="{{ each_reply.prior_node }}">
           <div clas="discussion-title row " >
              <div class="discussion-title-username">
-              <a  href="{% url 'dashboard' each_reply.userid %}" style="color:#ADABAB !important" title=" {{ each_reply.username }}">
+              <a  href="#" style="color:#ADABAB !important" title=" {{ each_reply.username }}">
                 {{ each_reply.contributors|join:', ' }}{% include 'ndf/rating.html' with if_comments=True nodeid=each_reply.oid %} 
               </a>
                 <small style="float:right;color:#999999">{{ each_reply.last_update }}</small>
