--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/user_course_analytics.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/user_course_analytics.html
@@ -404,6 +404,7 @@
         dataType: "json",
 
         success: function(data){
+          console.log(data)
           $(".correct_attempted_quizitems").html(data['correct_attempted_quizitems'])
           $(".unattempted_quizitems").html(data['unattempted_quizitems'])
           // $(".visited_quizitems").html(data['visited_quizitems'])
