deactivate Finish lesson btn

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/activity_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/activity_player.html
@@ -71,9 +71,11 @@
             <div class="course_tree">
               <div class="lesson-title" title="{{trans_lesson_name}}">
                   <b>{{trans_lesson_name}}</b>
+                  {% comment %}
                   {% if allow_finish_lesson %}
                     <a href="#" class="purple-btn finish-lesson right">Finish</a>
                   {% endif %}
+                  {% endcomment %}
               </div>
               <div class="activity-title">
               {% for each in act_list %}
@@ -114,7 +116,7 @@
               {% endif %}
               <div class="activity_page_rendered buddy_margin">
                 {% if "QuizItemEvent" in node_member_of_names_list or "QuizItem" in node_member_of_names_list%}
-                  {% load_quiz_player request group_id node allow_finish_lesson True %}
+                  {% load_quiz_player request group_id node True %}
                 {% else %}
                 {# {{node.content|safe}} #}
                 {% include "ndf/node_ajax_content.html" with node=trans_node expand_content=True  no_discussion=True hide_breadcrumbs=True %}
@@ -299,6 +301,7 @@
        
       });
 
+  /*
   $(document).on('click', '.finish-lesson', function(e){
       confirm_lesson_completion()
   })
@@ -353,6 +356,7 @@
             }
         });
   }
+  */
 
 </script>
 
