--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/module_detail.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/module_detail.html
@@ -20,7 +20,7 @@
 
 		         <div class="right course_actions" style="margin-top:0px;">
           		{% if is_gstaff   %}
-		            <span data-dropdown="course-settings-drop" aria-controls="course-settings-drop" aria-expanded="false" class="tiny radius right" style="margin-top: -10rem;position:absolute;margin-left:-50px;" data-options="align:left">
+		            <span data-dropdown="course-settings-drop" aria-controls="course-settings-drop" aria-expanded="false" class="tiny radius right" style="margin-top: -25px;position:absolute;margin-left:-50px;" data-options="align:left">
 		                  <i class="icon-widget fi-widget"></i>
 		            </span>
 		            <ul id="course-settings-drop" class="f-dropdown" data-dropdown-content aria-hidden="true" tabindex="-1">
