--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/curriculum_hierarchy.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/curriculum_hierarchy.html
@@ -4,7 +4,19 @@
 {% block title %} {% trans "Topic Map" %} {{curriculum_obj.name }}  {% endblock %}
 
 {% block body_content %}
-        {{curriculum_obj.name}} 
+        {{curriculum_obj.name}} : 
+        {{curriculum_obj.content_org}}  
+        <div class="right course_actions margin-right-50">
+              <span data-dropdown="course-settings-drop" aria-controls="course-settings-drop" aria-expanded="false" class="tiny radius right" data-options="align:left" style="margin-top: -25px;position:absolute;margin-left:-100px;">
+                  <i class="icon-widget fi-widget"></i>
+              </span>
+              <ul id="course-settings-drop" class="f-dropdown"  data-dropdown-content aria-hidden="true" tabindex="-1">
+              <li>
+                  <a href="" class="fi-pencil" data-reveal-id="create-edit-curriculum-reveal"> {% trans "Edit" %}</a>
+              </li>
+              </ul>
+          </div>
+        {% check_is_gstaff group_id request.user as is_gstaff %} 
         {% if not curriculum_obj %}
         <h3 data-reveal-id="create-edit-curriculum-reveal" class="hyperlink-tag">
             <i class="fi fi-plus"></i> Create Curriculum Tree Structure
@@ -286,7 +298,8 @@
                               data:{
                                     'csrfmiddlewaretoken': "{{csrf_token}}",
                                     'curr_name':curr_name,
-                                    'curr_desc':curr_desc
+                                    'curr_desc':curr_desc,
+                                    'curriculum_obj':'{{curriculum_obj.pk}}'
                                 },
                               url: "{% url 'create_edit_curriculum' group_id  %}",
                               datatype: "html",
@@ -296,6 +309,7 @@
                             }
                         });
                     });
+
             $( ".create_branch" ).click(function(event) {
                 branch_name = $("input[name='branch_name']").val();
                 existing_id = $(this).attr("id");
