--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/footer_clix.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/footer_clix.html
@@ -3,8 +3,8 @@
 {% load ndf_tags %}
 
 
-
-
+	{% get_gstudio_footer_links  as footer_links %}
+	  	   
 		<div class="bo-wrap clr4" style="margin-top:100px;">
 		  <div class="bo-footer">
 		    <div class="bo-footer-social">
@@ -17,18 +17,11 @@
 		<div class="bo-wrap clr3">
 		  <div class="bo-footer">
 		    <div class="bo-footer-smap">
-		        <a href="http://tatatrusts.org/" target="_blank">
-		            <img src="/static/ndf/images/tata-trusts-logo.svg" style="height: 14px; width:110px;" />
+	  		{% for path,link in footer_links.iteritems %}
+		        <a href="{{link}}" target="_blank">
+		            <img src="{{path}}" style="height: 100px; width:110px;" />
 		        </a>
-		        <a href="http://www.mit.edu" target="_blank">
-		            <img src="/static/ndf/images/mit-logo.svg" style="height: 35px; width:145px;"/>
-		        </a> 
-		        <a href="http://www.tiss.edu/" target="_blank" >
-		            <img src="/static/ndf/images/logos/tiss-logo-text.svg" style="height: 90px; width:85px;"/>
-		        </a>
-		        <a href="http://www.hbcse.tifr.res.in/" target="_blank">
-		          <img src="/static/ndf/images/logos/tifr.png" style="height: 55px; width:122px;"/>
-		        </a>
+  	    	{% endfor %}
 		    </div>
 
 
